# openenclave-openssl

./: .gitmodules  0001-Add-oe_once-recursive-lock.patch  0001-Add-support-for-recursive-calls-to-oe_once-pthread_o.patch  0001-Get-openssl-to-build-against-MUSL-headers.-Use-SGX-r.patch  README.md
sample/: Makefile  openssl_server.edl
sample/enc/: ..key.pem  Makefile  enc.c  openssl_server.conf  ssl_stubs.c
sample/host/: Makefile  host.c
test/: CMakeLists.txt  README.md  add_enclave_test.cmake  openssl.edl  tests.broken  tests.supported.default
test/enc/: CMakeLists.txt  add_enclave.cmake  enc.c  enc.cpp  get_testcase_name.cmake  ssl_stubs.c  tests.h
test/host/: CMakeLists.txt  host.cpp
